--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-imc></app-imc>
+<div class="container">
+    <div class="row mb-5 mt-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-5">
+            <h2>Calculadora de IMC</h2>
+        </div>
+    </div>
+    <app-imc></app-imc>
+</div>
