--- a/src/app/imc/imc.component.html
+++ b/src/app/imc/imc.component.html
@@ -1,9 +1,51 @@
-<select name="sexo" [(ngModel)]="genero">
-  <option value="h">Homem</option>
-  <option value="m">Mulher</option>
-</select>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-5">
+    <h4 style="margin-left: 10px;">Selecione seu gênero</h4>
+    <div class="input-group mb-3">
+      <select name="genero" class="custom-select" id="inputGroupSelect01" [(ngModel)]="genero">
+        <option value="h">Masculino</option>
+        <option value="m">Feminino</option>
+      </select>
+    </div>
+  </div>
+</div>
 
-<input type="number" name="peso" [(ngModel)]="peso">
-<input type="number" name="altura" [(ngModel)]="altura">
-<button type="button" name="btn" (click)="calcularImc()">Calcular</button>
-<input type="text" name="resultado" disabled [(ngModel)]="resultado">
+<div class="row text-center">
+  <div class="col-md-3"></div>
+  <div class="col-md-5">
+    <h4>Digite sua altura</h4>
+    <div class="input-group mb-3">
+      <input type="number" name="Altura" [(ngModel)]="altura" class="form-control" aria-label="Sizing example input"
+        aria-describedby="inputGroup-sizing-default">
+    </div>
+  </div>
+</div>
+
+<div class="row text-center">
+  <div class="col-md-3"></div>
+  <div class="col-md-5">
+    <h4>Digite seu peso</h4>
+    <div class="input-group mb-3">
+      <input type="number" name="peso" [(ngModel)]="peso" class="form-control" aria-label="Sizing example input"
+        aria-describedby="inputGroup-sizing-default">
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-5"></div>
+  <div class="col-md-5">
+    <button class="btn btn-success" type="button" name="btn" (click)="calcularImc()">Calcular</button>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-md-3"></div>
+  <div class="col-md-5">
+    <div class="input-group">
+      <textarea class="form-control" name="resultado" disabled rows="2" [(ngModel)]="resultado"
+        aria-label="With textarea"></textarea>
+    </div>
+  </div>
+</div>
